[gd_scene load_steps=9 format=3 uid="uid://b0i8w4y6jpddt"]

[ext_resource type="Script" path="res://script/start/Start.gd" id="1_a4fua"]
[ext_resource type="PackedScene" uid="uid://byp0sfn4apxll" path="res://sence/start/levelChoiceWindow.tscn" id="1_udu2w"]
[ext_resource type="Texture2D" uid="uid://c43i5hrrhawi6" path="res://assets/backgrounds/background1.png" id="2_6fy6l"]
[ext_resource type="Texture2D" uid="uid://b14swun08llpd" path="res://assets/UI/others/title.png" id="2_ylkws"]
[ext_resource type="PackedScene" uid="uid://dsb20dqiimav3" path="res://sence/start/start_button.tscn" id="3_vrnfq"]
[ext_resource type="PackedScene" uid="uid://3xyjbkr4js7v" path="res://sence/start/book_window.tscn" id="7_ig6ki"]
[ext_resource type="PackedScene" uid="uid://d1lu65w4nomle" path="res://sence/start/buy_card_window.tscn" id="7_llewj"]
[ext_resource type="PackedScene" uid="uid://smvhaqbhjd0o" path="res://sence/start/mini_game_window.tscn" id="8_paf7j"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a4fua")

[node name="Background1" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 835.0
offset_bottom = 450.0
texture = ExtResource("2_6fy6l")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="title" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 792.0
offset_bottom = 148.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ylkws")

[node name="buttonGroup" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 116.0
scale = Vector2(2, 2)
theme_override_constants/separation = 4

[node name="LevelChoiceButton" parent="buttonGroup" instance=ExtResource("3_vrnfq")]
layout_mode = 2

[node name="BuyCardButton" parent="buttonGroup" instance=ExtResource("3_vrnfq")]
layout_mode = 2

[node name="BookButton" parent="buttonGroup" instance=ExtResource("3_vrnfq")]
layout_mode = 2

[node name="MiniGameButton" parent="buttonGroup" instance=ExtResource("3_vrnfq")]
layout_mode = 2

[node name="LevelChoiceWindow" parent="." instance=ExtResource("1_udu2w")]
visible = false

[node name="BuyCardWindow" parent="." instance=ExtResource("7_llewj")]
visible = false

[node name="BookWindow" parent="." instance=ExtResource("7_ig6ki")]
visible = false

[node name="MiniGameWindow" parent="." instance=ExtResource("8_paf7j")]
visible = false

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
